migrated robertrichards.me to jekyll

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1314,7 +1314,7 @@ body:not(.post-template) .post-title {
     padding: 0.5rem 15px;
     border-top: #EBF2F6 1px solid;
     font-family: "brandon", sans-serif;
-    font-size: 1rem;
+    font-size: 1.5rem;
     line-height: 1.75em;
     color: #BBC7CC;
 }
@@ -1334,6 +1334,9 @@ body:not(.post-template) .post-title {
     width: 45%;
     float: right;
     text-align: right;
+}
+.red{
+    color: red;
 }
 
 .copyright {
