--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,7 @@
         <a href="{{ site.baseurl }}">{{ site.name }}</a> &copy; 
               {{date format="YYYY"}} &bull; All rights reserved.
       </section>
-      <section class="poweredby">Made with Jekyll using 
-        <a href="http://github.com/rosario/kasper">Kasper theme</a>
+      <section class="poweredby">Made with <i class="fa fa-heart red" aria-hidden="true"></i> by <span> <a href="http://robertrichards.me">Robert Richards</a></span>
       </section>
     </footer>
     
