--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     </script>
 <!--   END       google analytics-->
    
-   
+    <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
