added google webmaste

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
     </script>
 <!--   END       google analytics-->
-   
+    <meta name="google-site-verification" content="bcTX9j8AMG4HyrZ-6uBf4ehSny1uKB9bPipQAFlXEgU" />
     <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
