--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
         <a href="{{ site.baseurl }}">{{ site.name }}</a> &copy; 
               {{date format="YYYY"}} &bull; All rights reserved.
       </section>
-      <section class="poweredby">Made with <i class="fa fa-heart red" aria-hidden="true"></i> by <span> <a href="http://robertrichards.me">Robert Richards</a></span>
+      <section class="poweredby">Made with <i class="fa fa-heart red" aria-hidden="true"></i> by <span> <a href="http://robertrichards.me/resume">Robert Richards</a></span>
       </section>
     </footer>
     
