--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-disqus: true
+comments: true
 archive: false
 post_class: post-template
 ---
@@ -96,7 +96,7 @@ post_class: post-template
             {% include share.html %}
 
             <!-- Disqus comments -->
-            {% if page.disqus %}
+            {% if page.comments %}
                 {% include disqus.html %}
             {% endif %}
 
