--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 <!--    <title>{{ site.name }} - {{ site.description }}</title>-->
-    <meta name="description" content="{{ site.meta_description}}" />
+<!--    <meta name="description" content="{{ page.excerpt }}" />-->
 
     <meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
@@ -29,7 +29,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
     <!-- Customisation  -->
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
-
+    {% seo %}
 </head>
 <body class="{% if page.post_class %}{{page.post_class}}{% else %}home-template{% endif %}">
 
@@ -61,5 +61,5 @@
       })();
 
     </script>   
-</body>
+    </body>
 </html>
