--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,8 @@
     <script type="text/javascript" src="/assets/js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="/assets/js/jquery.fitvids.js"></script>
     <script type="text/javascript" src="/assets/js/index.js"></script>
+    <script type="text/javascript" src="/assets/js/quotes.js"></script>
+
 
     <!-- Google Analytics Tracking code -->
     <script type="text/javascript">
