--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -700,6 +700,16 @@ margin on the iframe, cause it breaks stuff. */
     color: rgba(255,255,255,0.8);
 }
 
+.page-description-smaller {
+    margin: 0;
+    font-size: 1.7rem;
+    line-height: 1.5em;
+    font-weight: 400;
+    font-family: "brandon", serif;
+    letter-spacing: 0.01rem;
+    color: rgba(255,255,255,0.8);
+}
+
 .no-cover.main-header {
     min-height: 160px;
     max-height: 40%;
