--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,7 @@ post_class: post-template
 <head>
     <title>{{ site.name }} - {{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/font-awesome.css">
+    <script src="//load.sumome.com/" data-sumo-site-id="8039ac0972b23d833a4967ac1b6d8c59d96ddafc0ed2a087faad42e628d90efe" async="async"></script>
 </head>
 
 <header class="main-header {% if page.cover %}" style="background-image: url({{ page.cover }}) {%else%}no-cover{% endif %}">
